[gd_scene load_steps=7 format=3 uid="uid://l8c4vk1emene"]

[ext_resource type="Script" uid="uid://lqj5333xy445" path="res://scenes/Card.gd" id="1_yiag5"]
[ext_resource type="Texture2D" uid="uid://bosefamxgquny" path="res://assets/Template Principal.png" id="2_template"]
[ext_resource type="Texture2D" uid="uid://buqvdrrshwe12" path="res://assets/stats/Money_ICON.png" id="3_money"]
[ext_resource type="Texture2D" uid="uid://b335w477c37dx" path="res://assets/stats/Moral Icon.png" id="4_moral"]
[ext_resource type="Texture2D" uid="uid://d11wsb4rj2lcy" path="res://assets/stats/Infra_Icon.png" id="5_infra"]
[ext_resource type="Texture2D" uid="uid://csx0ekb2k6lx2" path="res://assets/stats/Rep Icon.png" id="6_rep"]

[node name="Card" type="Node2D"]
script = ExtResource("1_yiag5")

[node name="Template" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_right = 450.0
offset_bottom = 650.0
texture = ExtResource("2_template")

[node name="Portrait" type="TextureRect" parent="Template"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -286.0
offset_right = 186.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="DialogueLabel" type="Label" parent="Template"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = 180.0
offset_right = 195.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
text = "Texto do di√°logo vem aqui..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="ChoiceLeftContainer" type="VBoxContainer" parent="Template"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
offset_left = 32.0
offset_top = 456.0
offset_right = 222.0
offset_bottom = 616.0
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="Template/ChoiceLeftContainer"]
layout_mode = 2
text = "Esq"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Icons" type="HBoxContainer" parent="Template/ChoiceLeftContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Money" type="TextureRect" parent="Template/ChoiceLeftContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("3_money")
expand_mode = 1

[node name="Moral" type="TextureRect" parent="Template/ChoiceLeftContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("4_moral")
expand_mode = 1

[node name="Infra" type="TextureRect" parent="Template/ChoiceLeftContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("5_infra")
expand_mode = 1

[node name="Reputation" type="TextureRect" parent="Template/ChoiceLeftContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("6_rep")
expand_mode = 1

[node name="ChoiceRightContainer" type="VBoxContainer" parent="Template"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
offset_left = 228.0
offset_top = 456.0
offset_right = 418.0
offset_bottom = 616.0
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="Template/ChoiceRightContainer"]
layout_mode = 2
text = "Dir"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Icons" type="HBoxContainer" parent="Template/ChoiceRightContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Money" type="TextureRect" parent="Template/ChoiceRightContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("3_money")
expand_mode = 1

[node name="Moral" type="TextureRect" parent="Template/ChoiceRightContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("4_moral")
expand_mode = 1

[node name="Infra" type="TextureRect" parent="Template/ChoiceRightContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("5_infra")
expand_mode = 1

[node name="Reputation" type="TextureRect" parent="Template/ChoiceRightContainer/Icons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("6_rep")
expand_mode = 1
